minor bug fix: refer text black, positioning on referral box, overflow scrolling

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,8 @@ body, html {
   width: 100%;
   height: 100%;
   margin: 0px;
+  overflow-y: scroll;
+
 }
 
 .wrapper {
